<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Wizard</string>
    <string name="action_settings">Settings</string>
   
    <string name="add_player">Add Player</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Score</string>
      
    <string name="dice_title">Dice Roller</string>
    <string name="roll_dice">Roll</string>
    
    <string name="time_title">Timer</string>
    <string name="start_timer">Start</string>
    <string name="pause_timer">Pause</string>
    <string name="stop_timer">Stop/Clear</string>
   
    <string name="scorekeep_title">Score Keeper</string>
    <string name="add_new">Add</string>    
    <string name="save">Save</string>        
    <string name="delete_button">Delete</string>
    <string name="edit_player">Edit Player</string>
    <string name= "edit_btn">Edit</string>
 
        
       
    
</resources>
