<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tittle_bkg" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/add_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/Padding_5dp"
            android:text="@string/add_player" 
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/Padding_5dp"
            android:text="@string/player_name" />

        <EditText
            android:id="@+id/playerNameEdit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="@dimen/Padding_5dp" >

            <requestFocus />
        </EditText>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/playerScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/Padding_5dp"
            android:text="@string/player_score" />

        <EditText
            android:id="@+id/playerScoreEdit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:padding="@dimen/Padding_5dp" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:id="@+id/savePlayer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" 
            android:onClick="addNew_player"
            android:layout_weight="1"/>

    </TableRow>

</TableLayout>
